--- a/store/app/globals.css
+++ b/store/app/globals.css
@@ -7,3 +7,42 @@ body,
 :root {
   height: 100%;
 }
+
+@media (max-width: 600px) {
+  .navbar-actions .full-buttons {
+    display: none;
+  }
+  .navbar-actions .burger-menu {
+    display: flex;
+  }
+}
+
+@media (min-width: 601px) {
+  .navbar-actions .full-buttons {
+    display: flex;
+  }
+  .navbar-actions .burger-menu {
+    display: none;
+  }
+}
+
+/* components/BurgerMenu.module.css */
+.fixed-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 50;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
